<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_home"
            android:title="@string/my_account" />
        <item
            android:id="@+id/achievements"
            android:icon="@drawable/ic_achievements"
            android:title="@string/achievements" />
        <item
            android:id="@+id/my_notifications"
            android:icon="@drawable/ic_notifications_blue"
            android:title="@string/my_notifications" />
        <item
            android:id="@+id/current_informations"
            android:icon="@drawable/ic_current_informations"
            android:title="@string/pref_header_notifications" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />
    </group>
</menu>