<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:orientation="vertical"
        tools:context="com.iskra.googlemapstutorial.OptionMenuActivities.AboutUsActivity">

        <TextView
            android:id="@+id/about_us_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_us_string"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="290dp">

            <ImageView
                android:id="@+id/imageView_ja"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ja_2" />

            <TextView
                android:id="@+id/text_angela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/angelika_iskra"
                android:textColor="@color/colorPrimaryBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toEndOf="@+id/imageView_ja"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13999999" />

            <TextView
                android:id="@+id/desc_angela"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desc_angela"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_ja"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/imageView_ja"
                app:layout_constraintTop_toBottomOf="@+id/text_angela"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/my_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/my_github"
                app:layout_constraintBottom_toTopOf="@+id/desc_angela"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/imageView_ja"
                app:layout_constraintTop_toBottomOf="@+id/text_angela"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_github2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/oskar_github"
            app:layout_constraintBottom_toTopOf="@+id/desc_oskar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/imageView_oskar"
            app:layout_constraintTop_toBottomOf="@+id/text_oskar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/desc_oskar"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desc_oskar"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_oskar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/imageView_oskar"
            app:layout_constraintTop_toBottomOf="@+id/text_oskar"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView_oskar"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@drawable/oskar" />

        <TextView
            android:id="@+id/text_oskar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/oskar_domingos"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_oskar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>