<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrayBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/button_korek"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:onClick="onClick"
                android:text="@string/button_korek"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.012" />

            <Button
                android:id="@+id/button_fotoradar"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:onClick="onClick"
                android:text="@string/button_fotoradar"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_korek"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_kontrola"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:onClick="onClick"
                android:text="@string/button_kontrola"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_fotoradar"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_wypadek"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:onClick="onClick"
                android:text="@string/button_wypadek"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_kontrola"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_remont"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:onClick="onClick"
                android:text="@string/button_remont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_wypadek"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_blokada"
                style="@style/ButtonTheme"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:onClick="onClick"
                android:text="@string/button_blokada"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_remont"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/layout_buttons"
            tools:context="com.iskra.googlemapstutorial.MapsActivity">

            <ImageButton
                android:id="@+id/button_fullscreen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorTransparentLightGray"
                android:onClick="onClick"
                android:padding="10dp"
                android:src="@drawable/icon_fullscreen" />
        </fragment>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_n_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_n_info"
            android:textColor="@color/colorBlackText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_n_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textStyle="italic" />

        <ListView
            android:id="@+id/list_view_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/text_n_info"
            android:scrollbars="vertical" />

    </RelativeLayout>


</LinearLayout>